--- a/ohos/oh-package.json5
+++ b/ohos/oh-package.json5
@@ -1,5 +1,5 @@
 {
-  "name": "flutter_icmp_ping",
+  "name": "flutter_icmp_ping_platform",
   "version": "1.0.0",
   "description": "Please describe the basic information.",
   "main": "index.ets",
