--- a/example/ohos/oh-package.json5
+++ b/example/ohos/oh-package.json5
@@ -15,6 +15,7 @@
   "overrides": {
     "@ohos/flutter_ohos": "file:./har/flutter.har",
     "@ohos/flutter_module": "file:./entry",
-    "flutter_icmp_ping": "file:./har/flutter_icmp_ping.har"
+    "flutter_icmp_ping": "file:./har/flutter_icmp_ping.har",
+    "flutter_icmp_ping_platform": "file:./har/flutter_icmp_ping_platform.har"
   }
 }
