--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_icmp_ping_example
-description: Demonstrates how to use the flutter_icmp_ping plugin.
+description: Demonstrates how to use the flutter_icmp_ping_platform plugin.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -18,7 +18,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_icmp_ping:
+  flutter_icmp_ping_platform:
     # When depending on this package from a real application you should use:
     #   flutter_icmp_ping: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
